# OrganigramaKpis

./: .gitignore  README.md  app.py  main.py  pruebaDaots.py  pruebaReender.py  pyproject.toml  requirements.txt
data/: Prueba Organigrama.xlsx  cargos_niveles.xlsx  tst.xlsx
docs_iniciales/: 20200922 - Credivalores - Perfiles, Comités, Indicadores v.3.pptx  prueba.xlsx
others/: pruebasGUI.py  respaldo.py
