[project]
name = "organigrama-kpis"
version = "0.1.0"
description = "Creación de Organigrama con KPIs para cada cargo, generado a partir de un archivo .xlsx o .csv con la información de la empresa"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "acres==0.5.0",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.11.18",
    "aiosignal==1.3.2",
    "altair==5.5.0",
    "altgraph==0.17.4",
    "amqp==5.3.1",
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "attrs==25.3.0",
    "babel==2.17.0",
    "billiard==4.2.1",
    "blinker==1.9.0",
    "cachetools==5.5.2",
    "celery==5.5.3",
    "certifi==2025.4.26",
    "charset-normalizer==3.4.2",
    "ci-info==0.3.0",
    "click==8.2.0",
    "click-didyoumean==0.3.1",
    "click-plugins==1.1.1.2",
    "click-repl==0.3.0",
    "colorama==0.4.6",
    "configobj==5.0.9",
    "configparser==7.2.0",
    "contourpy==1.3.2",
    "cycler==0.12.1",
    "dataclasses-json==0.6.7",
    "distro==1.9.0",
    "docxcompose==1.4.0",
    "docxtpl==0.20.1",
    "et-xmlfile==2.0.0",
    "etelemetry==0.3.1",
    "filelock==3.18.0",
    "fonttools==4.58.0",
    "frozenlist==1.6.0",
    "gitdb==4.0.12",
    "gitpython==3.1.44",
    "greenlet==3.2.2",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httplib2==0.22.0",
    "httpx==0.28.1",
    "httpx-sse==0.4.0",
    "idna==3.10",
    "importlib-resources==6.5.2",
    "jinja2==3.1.6",
    "jiter==0.10.0",
    "joblib==1.4.2",
    "jsonpatch==1.33",
    "jsonpointer==3.0.0",
    "jsonschema==4.23.0",
    "jsonschema-specifications==2025.4.1",
    "kiwisolver==1.4.8",
    "kombu==5.5.4",
    "langchain==0.3.27",
    "langchain-openai==0.3.32",
    "langsmith==0.4.15",
    "looseversion==1.3.0",
    "lxml==6.0.0",
    "markupsafe==3.0.2",
    "marshmallow==3.26.1",
    "matplotlib==3.10.3",
    "multidict==6.4.4",
    "mypy-extensions==1.1.0",
    "narwhals==1.40.0",
    "networkx==3.5",
    "nibabel==5.3.2",
    "nipype==1.10.0",
    "numpy==2.1.1",
    "openpyxl==3.1.5",
    "orjson==3.10.18",
    "ormsgpack==1.12.0",
    "packaging==24.2",
    "pandas==2.2.3",
    "pathlib==1.0.1",
    "pefile==2023.2.7",
    "pillow==11.2.1",
    "prettytable==3.16.0",
    "prompt-toolkit==3.0.51",
    "propcache==0.3.1",
    "protobuf==6.31.0",
    "prov==2.1.1",
    "puremagic==1.30",
    "pyarrow==20.0.0",
    "pydantic==2.11.7",
    "pydantic-core==2.33.2",
    "pydantic-settings==2.10.1",
    "pydeck==0.9.1",
    "pydot==4.0.1",
    "pyecharts==2.0.9",
    "pyinstaller==6.15.0",
    "pyinstaller-hooks-contrib==2025.8",
    "pymupdf==1.26.3",
    "pymysql==1.1.1",
    "pyparsing==3.2.3",
    "python-dateutil==2.9.0.post0",
    "python-docx==1.2.0",
    "python-dotenv==1.1.0",
    "pytz==2025.1",
    "pywin32-ctypes==0.2.3",
    "pyxnat==1.6.3",
    "pyyaml==6.0.2",
    "rdflib==7.1.4",
    "redis==6.2.0",
    "referencing==0.36.2",
    "regex==2025.7.34",
    "requests==2.32.5",
    "requests-toolbelt==1.0.0",
    "rpds-py==0.25.0",
    "scikit-learn==1.5.2",
    "scipy==1.14.1",
    "seaborn==0.13.2",
    "simplejson==3.20.1",
    "six==1.17.0",
    "smmap==5.0.2",
    "sniffio==1.3.1",
    "sqlalchemy==2.0.41",
    "st-cytoscape==0.0.5",
    "streamlit==1.45.1",
    "streamlit-agraph==0.0.45",
    "streamlit-echarts==0.4.0",
    "streamlit-echarts5==1.0.0",
    "streamlit-flow==0.1.0",
    "streamlit-flow-component==1.6.1",
    "tabulate==0.9.0",
    "tenacity==9.1.2",
    "threadpoolctl==3.5.0",
    "tiktoken==0.11.0",
    "toml==0.10.2",
    "tornado==6.5",
    "tqdm==4.67.1",
    "traits==7.0.2",
    "typing-extensions==4.13.2",
    "typing-inspect==0.9.0",
    "typing-inspection==0.4.0",
    "tzdata==2025.2",
    "urllib3==2.4.0",
    "vine==5.1.0",
    "watchdog==6.0.0",
    "wcwidth==0.2.13",
    "xlrd==2.0.2",
    "xlsxwriter==3.2.3",
    "xxhash==3.6.0",
    "yarl==1.20.0",
    "zstandard==0.23.0",
]
